--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "imgui"]
 	path = imgui
 	url = https://github.com/ocornut/imgui.git
+[submodule "imgui_js"]
+	path = imgui_js
+	url = https://github.com/flyover/imgui-js.git
