--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,13 +11,12 @@ name = "imgui_rust"
 serde = "1.0"
 serde_derive = "1.0"
 serde_json = "1.0"
+libc = "0.2.9"
 
-[target.'cfg(all(target_arch = "wasm32"))'.dependencies]
-stdweb = "0.4.10"
-stdweb-derive = "0.5.1"
+[target.wasm32-unknown-unknown.dependencies]
+stdweb = { version = "0.4.10", optional = true }
+wasm-bindgen = { version = "0.2.12", optional = true }
 
-
-[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
 
 
 
