--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,7 @@ serde = "1.0"
 serde_derive = "1.0"
 serde_json = "1.0"
 libc = "0.2.9"
+imgui-sys = "0.0.21"
 
 [target.wasm32-unknown-unknown.dependencies]
 stdweb = { version = "0.4.10", optional = true }
