--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,8 @@ name = "imgui_rust"
 serde = "1.0"
 serde_derive = "1.0"
 serde_json = "1.0"
+
+[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
 libc = "0.2.9"
 imgui-sys = "0.0.21"
 
